--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -1,8 +1,18 @@
 <resources>
     <string name="app_name">CPEN_321_M1</string>
+
     <string name="button_favorite_city">My Favorite City</string>
     <string name="button_phone_details">Phone Details</string>
     <string name="button_login_server">Login + Server Info</string>
     <string name="button_surprise">Surprise</string>
+
     <string name="title_activity_favorite_city">FavoriteCityActivity</string>
+
+    <string name="text_IP_server">Server IP Address:</string>
+    <string name="text_IP_client">Client IP Address:</string>
+    <string name="text_time_server">Server Local Time:</string>
+    <string name="text_time_client">Client Local Time:</string>
+    <string name="text_name">My Name:</string>
+    <string name="text_user_name">Logged In:</string>
+
 </resources>
