--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="button_favorite_city">My Favorite City</string>
     <string name="button_phone_details">Phone Details</string>
     <string name="button_login_server">Login + Server Info</string>
-    <string name="button_surprise">Surprise</string>
+    <string name="button_search_building">Search For UBC Building</string>
+    <string name="button_search">Search</string>
+    <string name="button_see_building_codes">See All Building Codes</string>
 
     <string name="title_activity_favorite_city">FavoriteCityActivity</string>
 
@@ -14,5 +16,9 @@
     <string name="text_time_client">Client Local Time:</string>
     <string name="text_name">My Name:</string>
     <string name="text_user_name">Logged In:</string>
+    <string name="text_building_code_placeholder">Building Code</string>
+    <string name="text_prompt">Enter a UBC Building Code</string>
+
+    <string name="title_activity_show_route">ShowRouteActivity</string>
 
 </resources>
